Fix nav spacing

--- a/thesis190/src/components/Navigation/Navigation.module.scss
+++ b/thesis190/src/components/Navigation/Navigation.module.scss
@@ -20,7 +20,7 @@
 
 .learn {
   position: absolute;
-  top: 20px;
+  bottom: 30%;
   left: 100px;
   padding: 40px 8px 40px;
   z-index: 6;
@@ -35,7 +35,7 @@
 
 .original {
   position: absolute;
-  top: 20px;
+  bottom: 30%;
   left: 33%;
   padding: 40px 8px 40px;
   z-index: 6;
@@ -50,7 +50,7 @@
 
 .about {
   position: absolute;
-  top: 35px;
+  bottom: 30%;
   left: 45%;
   padding: 40px 8px 40px;
   z-index: 6;
